task-3: fix getaway skelet
